--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 # API_URL=http://localhost:8000/api/v1
 NEXT_PUBLIC_API_URL=https://api.boostermotorsport.com/api/v1
-NEXT_PUBLIC_MEDIA_URL=https://api.boostermotorsport.com
+NEXT_PUBLIC_MEDIA_URL=https://api.boostermotorsport.com/
 # NEXT_PUBLIC_MEDIA_URL=http://localhost:8000/
 NEXT_PUBLIC_COMPANY_NAME=booster_motor
 NEXT_PUBLIC_COMPANY_MAIL=email@gmail.com
