--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_API_URL=https://api.boostermotorsport.com/api/v1
-NEXT_PUBLIC_MEDIA_URL=https://api.boostermotorsport.com
+NEXT_PUBLIC_MEDIA_URL=https://api.boostermotorsport.com/
 NEXT_PUBLIC_COMPANY_NAME=Booster Moter Sport
 NEXT_PUBLIC_COMPANY_MAIL=booster_motor_sport@gmail.com
 NEXT_PUBLIC_COMPANY_PHONE=+959453741976
